--- a/project.json
+++ b/project.json
@@ -1,6 +1,6 @@
 {
-    "name": "Referendum2014 Phototagging",
-    "short_name": "Ref2014",
+    "name": "Referendum2014 Phototagging_jeanne",
+    "short_name": "Ref2014_jeanne",
     "description": "PhotoTagging of 2014 Referendum Photographs Collection",
     "question": "Tag the photographs"
 }
